apps/cluster/keycloak-gateway-route/templates/tlsroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: keycloak-passthrough
  namespace: default
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
      sectionName: keycloak-passthrough
  hostnames:
    - keycloak.cloud.obara.xyz
  rules:
    - backendRefs:
        - name: keycloak-keycloak-http
          port: 8443
